# Fault-Tracker

./: .gitignore  .replit  DEPENDENCIES.md  DEPLOYMENT.md  DOCUMENTATION_GUIDE.md  README.md  TECHNICAL_DOCS.md  USER_GUIDE.md  app.py  config.py  forms.py  init_db.py  lang.py  models.py  overview  pyproject.toml  routes.py  translations.py  utils.py
attached_assets/: Pasted-I-need-you-to-create-a-web-application-using-Python-and-Flask-hosted-on-Replit-with-SQLite-as-the--1745393311173.txt
static/css/: style.css
static/js/: charts.js  main.js
templates/: 404.html  500.html  device_add.html  device_edit.html  device_import.html  device_list.html  fault_report.html  index.html  layout.html  login.html  profile.html  register.html  report_detail.html  report_list.html  reset_password.html  reset_password_request.html
templates/admin/: dashboard.html  reports.html  unit_management.html  user_management.html
