[project]
name = "fault-tracker"
version = "0.1.0"
description = "Medical Device Fault Management System"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "flask-wtf>=1.2.2",
    "itsdangerous>=2.2.0",
    "sqlalchemy==2.0.30",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "sendgrid>=6.11.0",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.1.0",
    "psycopg2-binary>=2.9.10",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "config", "forms", "lang", "main", "models", "routes", "translations", "utils", "init_db"]